--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "style-loader": "^0.23.0",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8",
+    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.4"
+  },
+  "dependencies": {
+    "update": "^0.7.4"
   }
 }
